Fixed grid overflow by setting grid-template-areas to none

--- a/7-testimonials-grid-section/sass/styles.scss
+++ b/7-testimonials-grid-section/sass/styles.scss
@@ -206,8 +206,7 @@ body{
 @media screen and (min-width:1000px) {
     .container{
         grid-template-columns: repeat(4, 1fr);
-        // grid-auto-rows: minmax(280px, 1fr);
-        grid-template-areas: unset;
+        grid-template-areas: none;
         
         .card-1{
             grid-column: 1 / span 2;
